<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OrderFood</string>
    <string name="sign_in">Đăng ký</string>
    <string name="log_in">Đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="confirm">Xác nhận</string>
    <string name="exit">Thoát</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="err_input_username">Vui lòng nhập tên đăng nhập</string>
    <string name="err_input_password">Vui lòng nhập mật khẩu</string>
    <string name="insert_success">Thêm thành công</string>
    <string name="insert_fail">Thêm không thành công</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="update_fail">Cập nhật không thành công</string>
    <string name="delete_success">Xóa thành công</string>
    <string name="delete_fail">Xóa không thành công</string>
    <string name="din_table">Bàn ăn</string>
    <string name="main">Trang chủ</string>
    <string name="menu">Thực đơn</string>
    <string name="employees">Nhân viên</string>
    <string name="statistic">Thống kê</string>
    <string name="setting">Cài đặt</string>
    <string name="insert">Thêm</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="change">Sửa</string>
    <string name="insert_dintable">Thêm bàn ăn</string>
    <string name="insert_din_name">Tên bàn</string>
    <string name="insert_menufood">Thêm món ăn</string>
    <string name="insert_employee">Thêm nhân viên</string>
    <string name="food_name">Tên món ăn</string>
    <string name="food_price">Giá tiền</string>
    <string name="foodtype">Loại món ăn</string>
    <string name="foodtype_name">Tên loại món</string>
    <string name="quantity">Số lượng</string>
    <string name="err_input_data">Vui lòng nhập dữ liệu</string>
    <string name="err_input_datas">Vui lòng nhập đầy đủ thông tin</string>
    <string name="payment">Thanh toán</string>
    <string name="sum_payment">Tổng tiền</string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="payment_fail">Thanh toán không thành công</string>
    <string name="update_info">Cập nhật thông tin</string>
</resources>
