<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="@color/colorDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_price"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="@color/colorDark"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="2dp"
        android:background="@color/colorRed_Crimson"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />

    <GridView
        android:id="@+id/gv_listPayment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:numColumns="1"
        >

    </GridView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="2dp"
        android:background="@color/colorRed_Crimson"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />

    <TextView
        android:id="@+id/tv_sumPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_payment"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@color/colorDark"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/bt_exitPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:layout_margin="10dp"
            android:textColor="@color/colorDark"
            android:background="@drawable/rounded_black_edittext"/>

    </LinearLayout>

</LinearLayout>