<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_pay_foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorDark"/>

        <TextView
            android:id="@+id/tv_pay_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorDark"/>

        <TextView
            android:id="@+id/tv_pay_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_price"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorDark"/>

    </LinearLayout>
</LinearLayout>