<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorOrange_Pizazz">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <ImageButton
            android:id="@+id/bt_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/us"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/bt_vi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/vi"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginBottom="11dp"
        android:layout_toEndOf="@+id/linearLayout"
        android:text="Đăng Nhập"
        android:textColor="@color/colorDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/dangnhap"
        android:id="@+id/imageView" />

    <LinearLayout
        android:id="@+id/ln_FormLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/et_usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/colorGray"
            android:padding="8dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorDark"
            android:background="@color/colorWhite"
            android:text="admin"
            android:maxLines="1"/>

        <EditText
            android:text="1234"
            android:id="@+id/et_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_word"
            android:textColorHint="@color/colorGray"
            android:padding="8dp"
            android:drawableLeft="@drawable/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorDark"
            android:background="@color/colorWhite"
            android:maxLines="1"/>

        <Button
            android:id="@+id/bt_loginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/colorDark"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/bt_signinLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorDark"
            android:text="@string/sign_in" />
    
    </LinearLayout>

</RelativeLayout>